objects/Calendario_de_Entrega__c.object
<CustomObject>
    <description>Objeto que identifica através dos registros os dias que são úteis para entrega do pedido. Utilizado para cálculo da data exata para entrega.</description>
    <fields>
        <fullName>calendar_key__c</fullName>
        <description>Identifica o código da transportadora do calendario.</description>
        <label>calendar key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cd_local__c</fullName>
        <description>Identifica o CD ao qual o calendário se aplica.</description>
        <label>cd local</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_full__c</fullName>
        <description>Data do dia no qual se busca a informação do calendário</description>
        <label>date full</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ind_util__c</fullName>
        <description>Identifica o tipo do dia:
W - work day
H - Holiday
E - Ending day (weekend).</description>
        <label>ind util</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>internal_id__c</fullName>
        <description>Indica a chave externa do registro.</description>
        <externalId>true</externalId>
        <label>internal id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pais__c</fullName>
        <description>Country Code</description>
        <label>Country</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Calendário de Entrega</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>calendar_key__c</columns>
        <columns>cd_local__c</columns>
        <columns>date_full__c</columns>
        <columns>ind_util__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>internal_id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>pais__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Calendario_Argentina</fullName>
        <columns>NAME</columns>
        <columns>calendar_key__c</columns>
        <columns>cd_local__c</columns>
        <columns>date_full__c</columns>
        <columns>ind_util__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>internal_id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>pais__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pais__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>date_full__c</field>
            <operation>greaterThan</operation>
            <value>5/30/2013</value>
        </filters>
        <label>Calendario Argentina</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Calendario_Brasil</fullName>
        <columns>NAME</columns>
        <columns>calendar_key__c</columns>
        <columns>cd_local__c</columns>
        <columns>date_full__c</columns>
        <columns>ind_util__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>internal_id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>pais__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pais__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>date_full__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2014</value>
        </filters>
        <label>Calendario Brasil</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Calendario_Uruguay</fullName>
        <columns>NAME</columns>
        <columns>calendar_key__c</columns>
        <columns>cd_local__c</columns>
        <columns>date_full__c</columns>
        <columns>ind_util__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>internal_id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>pais__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pais__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <filters>
            <field>date_full__c</field>
            <operation>greaterThan</operation>
            <value>5/30/2013</value>
        </filters>
        <label>Calendario Uruguay</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Todos</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>calendar_key__c</columns>
        <columns>cd_local__c</columns>
        <columns>date_full__c</columns>
        <columns>ind_util__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>internal_id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>pais__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nome do Calendario de Entrega</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendário de Entrega</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>